# blogbackend2

./: main.py  pyproject.toml  requirements.txt
templates/: article.html  base.html  index.html
